--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 
 rootProject.name = "AndroidLab"
 include ':app'
+include ':feature:serialization:gson'
+include ':feature:home'
