--- a/feature/serialization/gson/build.gradle
+++ b/feature/serialization/gson/build.gradle
@@ -34,6 +34,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core:common-ui')
+
     implementation libs.bundles.android.library
     testImplementation libs.bundles.test
     androidTestImplementation libs.bundles.android.test
