--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -34,6 +34,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core:common-ui')
+
     implementation libs.bundles.android.library
     implementation libs.bundles.test
     implementation libs.bundles.android.test
