Create Navigation Deeplink Module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':app'
 include ':feature:serialization:gson'
 include ':feature:home'
 include ':core:common-ui'
+include ':feature:component:navigation-deeplink'
