--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,9 +18,19 @@ android-material = "1.9.0"
 androidx-constraintlayout = "2.1.4"
 androidx-navigation = "2.5.3"
 
+activity-compose = "1.7.2"
+compose-ui = "1.3.3"
+compose-material = "1.3.1"
+compose-material3 = "1.0.1"
+androidx-compose-material = "1.5.1"
+
 junit = "4.13.2"
 androidx-junit = "1.1.5"
 androidx-expresso = "3.5.1"
+
+compose-ui-test-junit4 = "1.5.1"
+
+compose-ui-tooling = "1.3.3"
 
 [plugins]
 # build.gradle (project module)
@@ -37,6 +47,14 @@ androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayo
 androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidx-navigation" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidx-navigation" }
 
+# Compose Library
+activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
+compose-ui = { module = "androidx.activity:activity-compose", version.ref = "compose-ui" }
+compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics", version.ref = "compose-ui" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui" }
+compose-material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation"}
 
 # Test Library
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -44,11 +62,16 @@ junit = { module = "junit:junit", version.ref = "junit" }
 # Android Test Library
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-expresso" }
-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version = "2.7.2" }
-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version = "2.7.2" }
+compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-ui-test-junit4" }
+
+# Debug Library
+compose-ui-tooling-debug = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui-tooling" }
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose-ui" }
 
 [bundles]
 # Android
 android-library = ["androidx-core-ktx", "androidx-appcompat", "android-material", "androidx-constraintlayout", "androidx-navigation-fragment-ktx", "androidx-navigation-ui-ktx"]
+compose-library = ["activity-compose", "compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-navigation", "compose-material"]
+
 test = ["junit"]
 android-test = ["androidx-junit", "androidx-espresso"]
