Create Domain Module

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':feature:serialization:gson'
 include ':feature:home'
 include ':core:common-ui'
 include ':feature:component:navigation-deeplink'
+include ':core:domain'
