Apply Compose in Home

--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     alias(libs.plugins.android.application.gradle) apply false
     alias(libs.plugins.kotlin.gradle) apply false
     alias(libs.plugins.android.gradle) apply false
+    alias(libs.plugins.org.jetbrains.kotlin.jvm) apply false
 }
