--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ compose-ui = "1.3.3"
 compose-material = "1.3.1"
 compose-material3 = "1.0.1"
 androidx-compose-material = "1.5.1"
+lifecycle-runtime-compose = "2.6.0"
 
 junit = "4.13.2"
 androidx-junit = "1.1.5"
@@ -31,12 +32,14 @@ androidx-expresso = "3.5.1"
 compose-ui-test-junit4 = "1.5.1"
 
 compose-ui-tooling = "1.3.3"
+org-jetbrains-kotlin-jvm = "1.8.0"
 
 [plugins]
 # build.gradle (project module)
 android-application-gradle = { id = "com.android.application", version.ref = "android-gradle-plugin" }
 kotlin-gradle = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-gradle-plugin" }
 android-gradle = { id = "com.android.library", version.ref = "android-gradle-plugin" }
+org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
 
 [libraries]
 # Android Library
@@ -55,6 +58,7 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation"}
+lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle-runtime-compose" }
 
 # Test Library
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -71,7 +75,7 @@ compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", ve
 [bundles]
 # Android
 android-library = ["androidx-core-ktx", "androidx-appcompat", "android-material", "androidx-constraintlayout", "androidx-navigation-fragment-ktx", "androidx-navigation-ui-ktx"]
-compose-library = ["activity-compose", "compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-navigation", "compose-material"]
+compose-library = ["activity-compose", "compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-navigation", "compose-material", "lifecycle-runtime-compose"]
 
 test = ["junit"]
 android-test = ["androidx-junit", "androidx-espresso"]
