--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':feature:home'
 include ':core:common-ui'
 include ':feature:component:navigation-deeplink'
 include ':core:domain'
+include ':feature:social-login'
