--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':core:common-ui'
 include ':feature:component:navigation-deeplink'
 include ':core:domain'
 include ':feature:social-login'
+include ':core:network'
