--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation project(path: ':core:domain')
     implementation project(path: ':core:common-ui')
 
+    implementation("io.coil-kt:coil-compose:2.5.0")
+//    implementation "com.github.bumptech.glide:compose:1.0.0-beta01"
+
     implementation libs.bundles.android.library
     implementation libs.bundles.compose.library
     implementation libs.bundles.test
